Fixed navbar visibility and removed old audio code

--- a/images/main.css
+++ b/images/main.css
@@ -65,7 +65,6 @@ section {
   z-index: 999;
   overflow: hidden;
   background-color: rgb(43, 45, 53);
-  visibility: hidden;
   left: 0px;
   right: 0px;
 }
